--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homes-and-loans-monorepo",
   "private": true,
-  "packageManager": "pnpm@10.13.1",
+  "packageManager": "pnpm@8.15.6",
   "workspaces": [
     "apps/*",
     "packages/*"
@@ -11,7 +11,8 @@
     "build": "turbo run build"
   },
   "devDependencies": {
-    "turbo": "^1.13.4"
+    "turbo": "^1.13.4",
+    "typescript": "5.0.4"
   },
   "dependencies": {
     "next": "^14.2.4"
