--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,12 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.0",
+    "next": "14.2.4",
     "react": "18.3.0",
     "react-dom": "18.3.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.0",
+    "@types/node": "24.1.0",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.0.0"
   }
 }
